--- a/app/src/main/res/layout/fragment_send_success.xml
+++ b/app/src/main/res/layout/fragment_send_success.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -20,10 +19,10 @@
             <ImageView
                 android:layout_width="72dp"
                 android:layout_height="72dp"
-                android:layout_gravity="top"
+                android:layout_gravity="center_vertical"
                 android:layout_marginEnd="24dp"
                 android:padding="6dp"
-                android:src="@drawable/ic_check_circle" />
+                android:src="@drawable/ic_monero" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,7 +38,7 @@
 
                 <TextView
                     android:id="@+id/tvTxAmount"
-                    style="@style/MoneroText.Balance.Orange"
+                    style="@style/MoneroText.Balance.Orange.Smaller"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
