--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -141,6 +141,7 @@
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:paddingBottom="80dp"
+                android:transitionGroup="true"
                 app:layoutManager="LinearLayoutManager"
                 tools:listitem="@layout/item_transaction" />
 
