configure enabling of shift & exchange
refactor qr logo code

--- a/app/src/main/res/layout/fragment_send_address.xml
+++ b/app/src/main/res/layout/fragment_send_address.xml
@@ -60,6 +60,7 @@
             </RelativeLayout>
 
             <LinearLayout
+                android:id="@+id/llExchange"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
