--- a/app/src/main/res/values-ar/about.xml
+++ b/app/src/main/res/values-ar/about.xml
@@ -13,7 +13,7 @@
         <a href="https://monerujo.io/">monerujo.io</a>
         ]]></string>
 
-    <string name="سياسة الخصوصية"><![CDATA[
+    <string name="privacy_policy"><![CDATA[
         <h1>سياسة الخصوصية</h1>
         <p>
         هذه الصفحة تخبرك بسيايتنا بخصوص التجميع، الاستخدام، و الافصاح عن المعلومات الشخصيةالتي نستلمها من مستخدمي تطبيقنا (مونيرويو: محفظة مونيرو)
