--- a/app/src/main/res/values-ar/help.xml
+++ b/app/src/main/res/values-ar/help.xml
@@ -76,7 +76,7 @@
     <string name="help_list"><![CDATA[
         <h1>قائمة المحافظ</h1>
         <h2>العقدة</h2>
-        <p>.مونيرويو يستخدم عقدة بعيدة للاتصال بشبكة مونيرو دون الحاجة إلى تنزيل و الاحتفاظ بنسخة كاملة من سلسة الكتل. يمكنك العثور على قائمة من العقد الشائعة أو تعلم كيف تشغل عقدة خاصة بك هنا https://moneroworld.com/<p>
+        <p>.مونيرويو يستخدم عقدة بعيدة للاتصال بشبكة مونيرو دون الحاجة إلى تنزيل و الاحتفاظ بنسخة كاملة من سلسة الكتل. يمكنك العثور على قائمة من العقد الشائعة أو تعلم كيف تشغل عقدة خاصة بك هنا https://moneroworld.com<p>
             <p>يأتي مونيرويو مع بعض العقد البعيدة المحددة مسبقاً. مونيرويو يتذكر آخر خمس عقد مستخدمة.</p>
             
         <h2>المحافظ</h2>
@@ -91,7 +91,7 @@
         <h3>أعد التسمية</h3>
         <p>أعد تسمية المحفظة. النسخ الاحتياطية لا تعاد التسمية.</p>
         <h3>نسخة احتياطية</h3>
-        <p>أنشئ نسخة من المحفظة في مجلد <tt>backups</tt> داخل مجلد <tt>monerorujo</tt> مستبدلة النسخ السابقة هناك. </p>
+        <p>أنشئ نسخة من المحفظة في مجلد <tt>backups</tt> داخل مجلد <tt>monerujo</tt> مستبدلة النسخ السابقة هناك. </p>
         <h3>أرشيف</h3>
         <p>أنشئ نسخة احتياطية ثم احذف المحفظة. النسخة تبقى في مجلد <tt>backups</tt> إذا لم تعد بحاجة إلى نسخك الاحتياطية ينبغي أن تحذفهم باستعمال متصفح ملفات أو تطبيق حذف آمن.</p>
     ]]></string>
