--- a/app/src/main/res/values-ar/about.xml
+++ b/app/src/main/res/values-ar/about.xml
@@ -16,9 +16,9 @@
     <string name="privacy_policy"><![CDATA[
         <h1>سياسة الخصوصية</h1>
         <p>
-        هذه الصفحة تخبرك بسيايتنا بخصوص التجميع، الاستخدام، و الافصاح عن المعلومات الشخصيةالتي نستلمها من مستخدمي تطبيقنا (مونيرويو: محفظة مونيرو)
+        هذه الصفحة تخبرك بسياستنا بخصوص التجميع، الاستخدام، و الافصاح عن المعلومات الشخصيةالتي نستلمها من مستخدمي تطبيقنا (مونيرويو: محفظة مونيرو)
         </p>
-        <p>باستخدامك هذا التطبيق أنت توافق تجميع و استخدام المعلومات وفقا لهذه السياسة
+        <p>باستخدامك هذا التطبيق أنت توافق تجميع و استخدام المعلومات وفقاً لهذه السياسة
         </p>
         <h2>البيانات المجمعة</h2>
         <p> المعلومات الشخصية هي نوع من البيانات التي قد تعرف هوية شخص ما 
@@ -26,8 +26,8 @@
         <p> مفاتيح مونيرو و العناوين العامة مجمعة و معالجة من قبل التطبيق محليا لغرض معالجة المعاملات و هي ترسل الى شبكة مونيرو في حالة مشفرة
         </p>
         <p>لا يجمع التطبيق أي معلومات شخصية أخرى</p>
-        <p> إذا أنت تستخدم خدمة الصراف (اختياري)، مونيرويو يجلب سعر الصرف عبر api coinmarketcap.com. اطلع على سيايسة الخصوصية الخاصة بهم على https:coinmarketcap.com/privacy لتفاصيل على كيف تجمع بياناتك التي في الطلب.   </p>
-        <p> عندما تستعمل التطبيق لتدفع إلى عنوانين بيتكوين، فأنت تستعمل خدمة SideShift.ai. اطلع على سياسة الخصوصية الخاصة بهم على https://sideshift.ai/ للتفاصيل. يرسل مونيرويو عنوان بيتوين و المبلغ إليهم. سيأخذ أيضاً عنوان بروتوكول الإنترنت (ip) الخاص بك.</p>
+        <p> إذا أنت تستخدم خدمة الصراف (اختياري)، مونيرويو يجلب سعر الصرف عبر api coinmarketcap.com. اطلع على سياسة الخصوصية الخاصة بهم على https://coinmarketcap.com/privacy لتفاصيل على كيف تجمع بياناتك التي في الطلب.   </p>
+        <p> عندما تستعمل التطبيق لتدفع إلى عنوانين بيتكوين، فأنت تستعمل خدمة SideShift.ai. اطلع على سياسة الخصوصية الخاصة بهم على https://sideshift.ai للتفاصيل. يرسل مونيرويو عنوان بيتوين و المبلغ إليهم. سيأخذ أيضاً عنوان بروتوكول الإنترنت (ip) الخاص بك.</p>
         <h2>صلاحيات التطبيق</h2>
         <ul>
         <li>الإنترنت: للإتصال بشبكة مونيرو عبر عقدة مونيرو</li>
