--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -48,7 +48,7 @@
 
                 <TextView
                     android:id="@+id/tvConfirmations"
-                    style="@style/MoneroText"
+                    style="@style/MoneroText.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
